Satishsfdc5/src/Apttus Quote/Proposal-Configuration Integration/objects/Apttus_Proposal__ProposalSystemProperties__c.object
<CustomObject>
    <fields>
        <fullName>AutoSyncWithOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the proposal will be automatically synchronized with the opportunity when the proposal is accepted.</description>
        <label>Auto Sync With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncBundleUsingLineItems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether proposal line items should be used to synchronize bundle products. The default uses proposal summary objects.</description>
        <inlineHelpText>Indicates whether proposal line items should be used to synchronize bundle products. The default uses proposal summary objects.</inlineHelpText>
        <label>Sync Bundle Using Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncOptionProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option products should be synchronized along with the bundle. The default is synchronize bundle only.</description>
        <inlineHelpText>Indicates whether the option products should be synchronized along with the bundle. The default is synchronize bundle only.</inlineHelpText>
        <label>Sync Option Products</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>